[#4081] java9 module system support  - define agent module